k8s/angular-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-ui-main
  labels:
    app: angular-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-ui
  template:
    metadata:
      labels:
        app: angular-ui
    spec:
      containers:
        - name: angular-ui-pod
          image: supertacr.azurecr.io/angular-ui:v17
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-ui-svc
spec:
  selector:
    app: angular-ui
  ports:
    - name: ng-port
      protocol: TCP
      port: 80
      targetPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: angular-ui-ext-svc
# spec:
#   type: LoadBalancer
#   selector:
#     app: angular-ui
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
