k8s/nginx-entry-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-entry-main
  labels:
    app: nginx-entry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-entry
  template:
    metadata:
      labels:
        app: nginx-entry
    spec:
      containers:
        - name: nginx-entry-pod
          image: truckeracr.azurecr.io/nginx-entry:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-entry-ext-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx-entry
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80
      targetPort: 80
