k8s/trip-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-api-main
  labels:
    app: trip-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip-api
  template:
    metadata:
      labels:
        app: trip-api
    spec:
      containers:
        - name: trip-api-pod
          image: truckeracr.azurecr.io/trip-api:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8880
---
apiVersion: v1
kind: Service
metadata:
  name: trip-api-svc
spec:
  selector:
    app: trip-api
  ports:
    - name: trip-api-port
      protocol: TCP
      port: 80
      targetPort: 8880
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: trip-api-ext-svc
# spec:
#   type: LoadBalancer
#   selector:
#     app: trip-api
#   ports:
#     - name: trip-api-port
#       protocol: TCP
#       port: 80
#       targetPort: 8880
