k8s/user-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-main
  labels:
    app: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api-pod
          image: truckeracr.azurecr.io/user-api:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 7770
---
apiVersion: v1
kind: Service
metadata:
  name: user-api-svc
spec:
  selector:
    app: user-api
  ports:
    - name: user-api-port
      protocol: TCP
      port: 80
      targetPort: 7770
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: user-api-ext-svc
# spec:
#   type: LoadBalancer
#   selector:
#     app: user-api
#   ports:
#     - name: user-api-port
#       protocol: TCP
#       port: 80
#       targetPort: 7770
