k8s/web-mvc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-mvc-main
  labels:
    app: web-mvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-mvc
  template:
    metadata:
      labels:
        app: web-mvc
    spec:
      containers:
        - name: web-mvc-pod
          image: supertacr.azurecr.io/web-mvc:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-mvc-svc
spec:
  selector:
    app: web-mvc
  ports:
    - name: ng-port
      protocol: TCP
      port: 80
      targetPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: web-mvc-ext-svc
# spec:
#   type: LoadBalancer
#   selector:
#     app: web-mvc
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
