k8s/ingress-super-t.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: super-t-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/trips(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: trip-api-svc
                port:
                  number: 80
          - path: /api/users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-api-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-ui-svc
                port:
                  number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: super-t-ingress-static
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /static/$2
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path:
#         pathType: Prefix
#         backend:
#           service:
#             name: angular-ui-svc
#             port:
#               number: 80
#         path: /static(/|$)(.*)
